# Juicy.Pixels

./: .gitignore  .travis.yml  JuicyPixels.cabal  LICENSE  Makefile  Picture.cabal  README.md  cabal.haskell-ci  changelog  clean_test.ps1  imageReporter.py  index.html  main.hs  saferizer.ps1
.github/workflows/: haskell-ci.yml
Codec/: Picture.hs
Codec/Picture/: BitWriter.hs  Bitmap.hs  ColorConversion.hs  ConvGraph.hs  Gif.hs  HDR.hs  InternalHelper.hs  Jpg.hs  Png.hs  Saving.hs  Tiff.hs  Types.hs  VectorByteConversion.hs
Codec/Picture/Gif/: LZW.hs  Writer.hs
Codec/Picture/Jpg/: Common.hs  DefaultTable.hs  FastDct.hs  FastIdct.hs  Progressive.hs  Types.hs
Codec/Picture/Png/: Export.hs  Type.hs
docimages/: pixelgraph.gv
skeletons/: jpeg-basic.hs
src/Codec/: Picture.hs
src/Codec/Picture/: BaseTypes.hs  BitWriter.hs  Bitmap.hs  ColorQuant.hs  Gif.hs  HDR.hs  InternalHelper.hs  Jpg.hs  LegacyTypes.hs  Metadata.hs  NewPixels.hs  OldPixels.hs  Png.hs  Saving.hs  Tga.hs  Tiff.hs  Types.hs  TypesPrime.hs  VectorByteConversion.hs
src/Codec/Picture/Gif/: LZW.hs  LZWEncoding.hs
src/Codec/Picture/Gif/Internal/: LZW.hs  LZWEncoding.hs
src/Codec/Picture/Jpg/: Common.hs  DefaultTable.hs  FastDct.hs  FastIdct.hs  Metadata.hs  Progressive.hs  Types.hs
src/Codec/Picture/Jpg/Internal/: Common.hs  DefaultTable.hs  FastDct.hs  FastIdct.hs  Metadata.hs  Progressive.hs  Types.hs
src/Codec/Picture/Metadata/: Exif.hs
src/Codec/Picture/Png/: Export.hs  Metadata.hs  Type.hs
src/Codec/Picture/Png/Internal/: Export.hs  Metadata.hs  Type.hs
src/Codec/Picture/Tiff/: Metadata.hs  Types.hs
src/Codec/Picture/Tiff/Internal/: Metadata.hs  Types.hs
test-src/: main.hs  palette.hs  toPng.hs
tests/: Juicy.hs
tests/bmp/: .gitignore
tests/jpeg/: .gitignore
tests/pngsuite/: .gitignore
tests/radiance/: free_009.hdr  sunrise.hdr
tests/tga/: tgatest.c
tests/tiff/: float16deflate.tif  horizontal-difference-lzw.tiff  rad_Y32.tif  rad_YF.tif
tests/tiff/compression/: cs3n2c16.tif  flower-rgb-contig-16-packbits.tif
tests/tiff/other/: README  butique-YA16.tif  butique-YA8.tif
