Name:                JuicyPixels
Version:             3.3.5
Synopsis:            Picture loading/serialization (in png, jpeg, bitmap, gif, tga, tiff and radiance)
Description:
    <<data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMAAAADABAMAAACg8nE0AAAAElBMVEUAAABJqDSTWEL/qyb///8AAABH/1GTAAAAAXRSTlMAQObYZgAAAN5JREFUeF7s1sEJgFAQxFBbsAV72v5bEVYWPwT/XDxmCsi7zvHXavYREBDI3XP2GgICqBBYuwIC+/rVayPUAyAg0HvIXBcQoDFDGnUBgWQQ2Bx3AYFaRoBpAQHWb3bt2ARgGAiCYFFuwf3X5HA/McgGJWI2FdykCv4aBYzmKwDwvl6NVmUAAK2vlwEALK7fo88GANB6HQsAAAAAAAAA7P94AQCzswEAAAAAAAAAAAAAAAAAAICzh4UAO4zWAYBfRutHA4Bn5C69JhowAMGoBaMWDG0wCkbBKBgFo2AUAACPmegUST/IJAAAAABJRU5ErkJggg==>>
    .
    This library can load and store images in PNG,Bitmap, Jpeg, Radiance, Tiff and Gif images.

homepage:            https://github.com/Twinside/Juicy.Pixels
License:             BSD3
License-file:        LICENSE
Author:              Vincent Berthoux
Maintainer:          vincent.berthoux@gmail.com
Category:            Codec, Graphics, Image
Stability:           Stable
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >= 1.18

extra-source-files: changelog, docimages/*.png, docimages/*.svg, README.md
extra-doc-files: docimages/*.png, docimages/*.svg

Source-Repository head
    Type:      git
    Location:  git://github.com/Twinside/Juicy.Pixels.git

Source-Repository this
    Type:      git
    Location:  git://github.com/Twinside/Juicy.Pixels.git
    Tag:       v3.3.5

Flag Mmap
    Description: Enable the file loading via mmap (memory map)
    Default: False

Library
  hs-source-dirs: src
  Default-Language: Haskell2010
  Exposed-modules:  Codec.Picture,
                    Codec.Picture.Bitmap,
                    Codec.Picture.Gif,
                    Codec.Picture.Png,
                    Codec.Picture.Jpg,
                    Codec.Picture.HDR,
                    Codec.Picture.Tga,
                    Codec.Picture.Tiff,
                    Codec.Picture.Metadata,
                    Codec.Picture.Metadata.Exif,
                    Codec.Picture.Saving,
                    Codec.Picture.Types,
                    Codec.Picture.ColorQuant,
                    Codec.Picture.Jpg.Internal.DefaultTable,
                    Codec.Picture.Jpg.Internal.Metadata,
                    Codec.Picture.Jpg.Internal.FastIdct,
                    Codec.Picture.Jpg.Internal.FastDct,
                    Codec.Picture.Jpg.Internal.Types,
                    Codec.Picture.Jpg.Internal.Common,
                    Codec.Picture.Jpg.Internal.Progressive,
                    Codec.Picture.Gif.Internal.LZW,
                    Codec.Picture.Gif.Internal.LZWEncoding,
                    Codec.Picture.Png.Internal.Export,
                    Codec.Picture.Png.Internal.Type,
                    Codec.Picture.Png.Internal.Metadata,
                    Codec.Picture.Tiff.Internal.Metadata,
                    Codec.Picture.Tiff.Internal.Types

  Ghc-options: -O3 -Wall
  Build-depends: base                >= 4.8     && < 6,
                 bytestring          >= 0.9     && < 0.11,
                 mtl                 >= 1.1     && < 2.3,
                 binary              >= 0.8.1     && < 0.9,
                 zlib                >= 0.5.3.1 && < 0.7,
                 transformers        >= 0.2,
                 vector              >= 0.10    && < 0.13,
                 primitive           >= 0.4,
                 deepseq             >= 1.1     && < 1.5,
                 containers          >= 0.4.2   && < 0.7

  -- Modules not exported by this package.
  Other-modules: Codec.Picture.BitWriter,
                 Codec.Picture.InternalHelper,
                 Codec.Picture.VectorByteConversion

  Install-Includes: src/Codec/Picture/ConvGraph.hs
  Include-Dirs: src/Codec/Picture

