Name:                JuicyPixels
Version:             3.3.9
Synopsis:            Picture loading/serialization (in png, jpeg, bitmap, gif, tga, tiff and radiance)
Description:
    <<data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMAAAADABAMAAACg8nE0AAAAElBMVEUAAABJqDSTWEL/qyb///8AAABH/1GTAAAAAXRSTlMAQObYZgAAAN5JREFUeF7s1sEJgFAQxFBbsAV72v5bEVYWPwT/XDxmCsi7zvHXavYREBDI3XP2GgICqBBYuwIC+/rVayPUAyAg0HvIXBcQoDFDGnUBgWQQ2Bx3AYFaRoBpAQHWb3bt2ARgGAiCYFFuwf3X5HA/McgGJWI2FdykCv4aBYzmKwDwvl6NVmUAAK2vlwEALK7fo88GANB6HQsAAAAAAAAA7P94AQCzswEAAAAAAAAAAAAAAAAAAICzh4UAO4zWAYBfRutHA4Bn5C69JhowAMGoBaMWDG0wCkbBKBgFo2AUAACPmegUST/IJAAAAABJRU5ErkJggg==>>
    .
    This library can load and store images in PNG,Bitmap, Jpeg, Radiance, Tiff and Gif images.

homepage:            https://github.com/Twinside/Juicy.Pixels
License:             BSD3
License-file:        LICENSE
Author:              Vincent Berthoux
Maintainer:          vincent.berthoux@gmail.com
Category:            Codec, Graphics, Image
Stability:           Stable
Build-type:          Simple
cabal-version: >= 1.18
tested-with:
  GHC == 9.8.1
  GHC == 9.6.4
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

extra-doc-files: changelog, docimages/*.png, docimages/*.svg, README.md
extra-doc-files: docimages/*.png, docimages/*.svg

Source-Repository head
    Type:      git
    Location:  git://github.com/Twinside/Juicy.Pixels.git

Source-Repository this
    Type:      git
    Location:  git://github.com/Twinside/Juicy.Pixels.git
    Tag:       v3.3.8

Flag Mmap
    Description: Enable the file loading via mmap (memory map)
    Default: False

Library
  hs-source-dirs: src
  Default-Language: Haskell2010
  default-extensions: TypeOperators
  Exposed-modules:  Codec.Picture,
                    Codec.Picture.Bitmap,
                    Codec.Picture.Gif,
                    Codec.Picture.Png,
                    Codec.Picture.Jpg,
                    Codec.Picture.HDR,
                    Codec.Picture.Tga,
                    Codec.Picture.Tiff,
                    Codec.Picture.Metadata,
                    Codec.Picture.Metadata.Exif,
                    Codec.Picture.Saving,
                    Codec.Picture.Types,
                    Codec.Picture.ColorQuant,
                    Codec.Picture.Jpg.Internal.DefaultTable,
                    Codec.Picture.Jpg.Internal.Metadata,
                    Codec.Picture.Jpg.Internal.FastIdct,
                    Codec.Picture.Jpg.Internal.FastDct,
                    Codec.Picture.Jpg.Internal.Types,
                    Codec.Picture.Jpg.Internal.Common,
                    Codec.Picture.Jpg.Internal.Progressive,
                    Codec.Picture.Gif.Internal.LZW,
                    Codec.Picture.Gif.Internal.LZWEncoding,
                    Codec.Picture.Png.Internal.Export,
                    Codec.Picture.Png.Internal.Type,
                    Codec.Picture.Png.Internal.Metadata,
                    Codec.Picture.Tiff.Internal.Metadata,
                    Codec.Picture.Tiff.Internal.Types

  Ghc-options: -O3 -Wall
  Build-depends: base                >= 4.8     && < 5,
                 bytestring          >= 0.9     && < 0.13,
                 mtl                 >= 1.1     && < 2.4,
                 binary              >= 0.8.1   && < 0.9,
                 zlib                >= 0.5.3.1 && < 0.8,
                 transformers        >= 0.2,
                 vector              >= 0.12.3.1,
                 primitive           >= 0.4,
                 deepseq             >= 1.1     && < 1.6,
                 containers          >= 0.4.2   && < 0.8

  -- Modules not exported by this package.
  Other-modules: Codec.Picture.BitWriter,
                 Codec.Picture.InternalHelper,
                 Codec.Picture.VectorByteConversion

  Install-Includes: src/Codec/Picture/ConvGraph.hs
  Include-Dirs: src/Codec/Picture

