Name:                Picture
Version:             0.1
Synopsis:            Picture loading/serialization
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Vincent Berthoux
Maintainer:          vincent.berthoux@gmail.com
-- Copyright:           
Category:            Codec
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Executable imageTest
  Main-Is: main.hs
  Extensions: CPP
  Ghc-options: -Wall -cpp
  Build-depends: base, 
                 array,
                 bytestring,
                 mtl >= 1.1,
                 cereal >= 0.3.3.0 && < 0.4,
                 zlib >= 0.5.3.1,
                 filepath >= 1.2,
                 transformers >= 0.2.2 && < 0.3,
                 groom

Library
  -- Modules exported by the library.
  Exposed-modules:  Codec.Picture.Bitmap,
                    Codec.Picture.Png,
                    Codec.Picture.Jpg,
                    Codec.Picture.Types,
                    Codec.Picture.ColorConversion
  Extensions: CPP
  Ghc-options: -Wall -cpp
  Build-depends: base, 
                 array,
                 bytestring,
                 mtl >= 1.1,
                 cereal >= 0.3.3.0 && < 0.4,
                 zlib >= 0.5.3.1,
                 transformers >= 0.2.2 && < 0.3,
                 groom
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
